idea/testData/script/definition/highlighting/throwingResolver/script.kts
<error descr="Exception from resolver (java.lang.IllegalStateException: Exception from resolver)"></error>
val s = 3
val g = 4